--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="200dp">
+        android:paddingBottom="10dp">
 
         <LinearLayout
             android:id="@+id/linearLayout4"
@@ -60,7 +60,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/textView31" />
 
                     <Button
-                        android:id="@+id/button"
+                        android:id="@+id/btnBookQueue"
                         android:layout_width="120dp"
                         android:layout_height="40dp"
                         android:layout_marginTop="20dp"
@@ -116,7 +116,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/textView32" />
 
                     <Button
-                        android:id="@+id/button2"
+                        android:id="@+id/btnBookReserve"
                         android:layout_width="120dp"
                         android:layout_height="40dp"
                         android:layout_marginTop="20dp"
