--- a/app/src/main/res/layout/lists_of_restaurant.xml
+++ b/app/src/main/res/layout/lists_of_restaurant.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/restaurantImage"
+            android:id="@+id/ivListRestaurantRestaurantImage"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginStart="20dp"
@@ -26,7 +26,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/restaurantName"
+            android:id="@+id/tvListRestaurantTitle"
             android:layout_width="0dp"
             android:textAlignment="center"
             android:layout_height="wrap_content"
@@ -37,12 +37,12 @@
             android:textColor="@color/black"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/restaurantImage"
-            app:layout_constraintTop_toTopOf="@+id/restaurantImage"
+            app:layout_constraintStart_toEndOf="@+id/ivListRestaurantRestaurantImage"
+            app:layout_constraintTop_toTopOf="@+id/ivListRestaurantRestaurantImage"
             android:gravity="center_horizontal" />
 
         <TextView
-            android:id="@+id/restaurantAddress"
+            android:id="@+id/tvListRestaurantAddress"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textStyle="bold"
@@ -50,13 +50,13 @@
             android:textSize="14sp"
             android:textColor="@color/restaurantAddressTextColor"
             android:text="Morayta, Metro manila"
-            app:layout_constraintEnd_toEndOf="@+id/restaurantName"
-            app:layout_constraintStart_toStartOf="@+id/restaurantName"
-            app:layout_constraintTop_toBottomOf="@+id/restaurantName"
+            app:layout_constraintEnd_toEndOf="@+id/tvListRestaurantTitle"
+            app:layout_constraintStart_toStartOf="@+id/tvListRestaurantTitle"
+            app:layout_constraintTop_toBottomOf="@+id/tvListRestaurantTitle"
             android:gravity="center_horizontal" />
 
         <TextView
-            android:id="@+id/restaurantSchedule"
+            android:id="@+id/tvRestaurantSchedule"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
@@ -64,9 +64,9 @@
             android:layout_marginTop="3dp"
             android:textColor="@color/restaurantOpeningTextColor"
             android:text="Open today until 10:00 pm"
-            app:layout_constraintEnd_toEndOf="@+id/restaurantAddress"
-            app:layout_constraintStart_toStartOf="@+id/restaurantAddress"
-            app:layout_constraintTop_toBottomOf="@+id/restaurantAddress"
+            app:layout_constraintEnd_toEndOf="@+id/tvListRestaurantAddress"
+            app:layout_constraintStart_toStartOf="@+id/tvListRestaurantAddress"
+            app:layout_constraintTop_toBottomOf="@+id/tvListRestaurantAddress"
             android:gravity="center_horizontal" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
