--- a/app/src/main/res/layout/activity_reservation_form.xml
+++ b/app/src/main/res/layout/activity_reservation_form.xml
@@ -1,9 +1,385 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ReservationFormActivity">
+    android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar23"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:backgroundTint="@color/white"
+            android:contentInsetStart="0dp"
+            android:contentInsetLeft="0dp"
+            android:contentInsetEnd="0dp"
+            android:contentInsetRight="0dp"
+            android:elevation="4dp"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
+            app:contentInsetEnd="0dp"
+            app:contentInsetLeft="0dp"
+            app:contentInsetRight="0dp"
+            app:contentInsetStart="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="16dp">
+
+                <ImageView
+                    android:id="@+id/btn_reserve_form_back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:src="@drawable/ic_back2"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tvChooseOrderSetTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Reservation"
+                    android:textColor="@color/loginColor"
+                    android:textSize="20sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/btn_reserve_form_back"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/btn_reserve_form_back" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.appcompat.widget.Toolbar>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clReserveForm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar23">
+
+            <TextView
+                android:id="@+id/textView30"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:layout_marginHorizontal="20dp"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/restaurantAddressTextColor"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:text="Date"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Spinner
+                android:id="@+id/spinnerReserveFormDate"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/edit_text_queue_form"
+                android:paddingHorizontal="5dp"
+                android:paddingVertical="4dp"
+                android:textColor="@color/restaurantAddressTextColor"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="@+id/textView30"
+                app:layout_constraintStart_toStartOf="@+id/textView30"
+                app:layout_constraintTop_toBottomOf="@+id/textView30" />
+
+            <TextView
+                android:id="@+id/textView301"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="25dp"
+                android:fontFamily="@font/montserrat"
+                android:text="Time"
+                android:textColor="@color/restaurantAddressTextColor"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.146"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/spinnerReserveFormDate" />
+
+            <Spinner
+                android:id="@+id/spinnerReserveFormTime"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/edit_text_queue_form"
+                android:paddingHorizontal="5dp"
+                android:paddingVertical="4dp"
+                android:textColor="@color/restaurantAddressTextColor"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="@+id/textView301"
+                app:layout_constraintStart_toStartOf="@+id/textView301"
+                app:layout_constraintTop_toBottomOf="@+id/textView301" />
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="25dp"
+                android:fontFamily="@font/montserrat"
+                android:text="Order Set"
+                android:textColor="@color/restaurantAddressTextColor"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.39"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/spinnerReserveFormTime" />
+
+            <TextView
+                android:id="@+id/tvReserveFormOrderSet"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/edit_text_queue_form_disabled"
+                android:fontFamily="@font/montserrat"
+                android:paddingHorizontal="10dp"
+                android:paddingVertical="8dp"
+                android:text="399"
+                android:textColor="@color/restaurantAddressTextColor"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="@+id/textView11"
+                app:layout_constraintStart_toStartOf="@+id/textView11"
+                app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
+            <TextView
+                android:id="@+id/textView111"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="25dp"
+                android:fontFamily="@font/montserrat"
+                android:text="No. of Persons"
+                android:textColor="@color/restaurantAddressTextColor"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvReserveFormOrderSet" />
+
+            <EditText
+                android:id="@+id/etReserveFormNumberOfPeople"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/edit_text_queue_form"
+                android:fontFamily="@font/montserrat"
+                android:hint="(e.g. 10)"
+                android:inputType="number"
+                android:paddingHorizontal="10dp"
+                android:paddingVertical="8dp"
+                android:textColor="@color/restaurantAddressTextColor"
+                android:textColorHint="@color/starColorNotActive"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="@+id/textView111"
+                app:layout_constraintStart_toStartOf="@+id/textView111"
+                app:layout_constraintTop_toBottomOf="@+id/textView111" />
+
+
+            <TextView
+                android:id="@+id/tvReserveFormHoursOfStayLabel"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="28dp"
+                android:fontFamily="@font/montserrat"
+                android:text="Estimated Hours of Stay"
+                android:textColor="@color/restaurantAddressTextColor"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/etReserveFormNumberOfPeople" />
+
+            <Spinner
+                android:id="@+id/spinnerReserveFormHoursOfStay"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/edit_text_queue_form"
+                android:paddingHorizontal="5dp"
+                android:paddingVertical="4dp"
+                android:textColor="@color/restaurantAddressTextColor"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="@+id/tvReserveFormHoursOfStayLabel"
+                app:layout_constraintStart_toStartOf="@+id/tvReserveFormHoursOfStayLabel"
+                app:layout_constraintTop_toBottomOf="@+id/tvReserveFormHoursOfStayLabel" />
+
+
+            <TextView
+                android:id="@+id/tvReserveFormHoursOfStay"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/edit_text_queue_form_disabled"
+                android:fontFamily="@font/montserrat"
+                android:paddingHorizontal="10dp"
+                android:paddingVertical="8dp"
+                android:text="2 hours"
+                android:textColor="@color/restaurantAddressTextColor"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="@+id/tvReserveFormHoursOfStayLabel"
+                app:layout_constraintStart_toStartOf="@+id/tvReserveFormHoursOfStayLabel"
+                app:layout_constraintTop_toBottomOf="@+id/tvReserveFormHoursOfStayLabel" />
+
+            <LinearLayout
+                android:id="@+id/linearLayout112"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="@+id/spinnerReserveFormHoursOfStay"
+                app:layout_constraintStart_toStartOf="@+id/spinnerReserveFormHoursOfStay"
+                app:layout_constraintTop_toBottomOf="@+id/spinnerReserveFormHoursOfStay">
+
+
+                <CheckBox
+                    android:id="@+id/cbReserveFormChildren"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/montserrat"
+                    android:text="Children (7 below)"
+                    android:textColor="@color/restaurantAddressTextColor"
+                    android:textStyle="bold" />
+
+                <CheckBox
+                    android:id="@+id/cbReserveFormSenior"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/montserrat"
+                    android:text=" Senior Citizen / PWD"
+                    android:textColor="@color/restaurantAddressTextColor"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearLayout1112"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="@+id/linearLayout112"
+                app:layout_constraintStart_toStartOf="@+id/linearLayout112"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout112">
+
+                <EditText
+                    android:id="@+id/etReserveFormNumberOfChildren"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/edit_text_queue_form_disabled"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    android:fontFamily="@font/montserrat"
+                    android:hint="(e.g. 2)"
+                    android:inputType="number"
+                    android:paddingHorizontal="10dp"
+                    android:paddingVertical="8dp"
+                    android:textColor="@color/restaurantAddressTextColor"
+                    android:textColorHint="@color/starColorNotActive"
+                    android:textSize="14sp" />
+
+                <EditText
+                    android:id="@+id/etReserveFormNumberOfPwd"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/edit_text_queue_form_disabled"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    android:fontFamily="@font/montserrat"
+                    android:hint="(e.g. 1)"
+                    android:inputType="number"
+                    android:paddingHorizontal="10dp"
+                    android:paddingVertical="8dp"
+                    android:textColor="@color/restaurantAddressTextColor"
+                    android:textColorHint="@color/starColorNotActive"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+
+            <TextView
+                android:id="@+id/textView111112"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/montserrat"
+                android:text="Notes"
+                android:textColor="@color/restaurantAddressTextColor"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout1112" />
+
+            <EditText
+                android:id="@+id/etReserveFormNotes"
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/edit_text_queue_form"
+                android:fontFamily="@font/montserrat"
+                android:gravity="start|top"
+                android:hint="Type your message here..."
+                android:inputType="textMultiLine"
+                android:paddingHorizontal="10dp"
+                android:paddingVertical="8dp"
+                android:textColor="@color/restaurantAddressTextColor"
+                android:textColorHint="@color/starColorNotActive"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="@+id/textView111112"
+                app:layout_constraintStart_toStartOf="@+id/textView111112"
+                app:layout_constraintTop_toBottomOf="@+id/textView111112" />
+
+            <Button
+                android:id="@+id/btnReserveFormNext"
+                android:layout_width="150dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/login_button"
+                android:fontFamily="@font/montserrat"
+                android:text="Next"
+                android:textAllCaps="false"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/etReserveFormNotes" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</androidx.core.widget.NestedScrollView>
