--- a/app/src/main/res/layout/list_of_notifications.xml
+++ b/app/src/main/res/layout/list_of_notifications.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/clNotificationListBackground"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/notificationBgColor"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
+    android:paddingVertical="10dp"
+    android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/circleImageView3"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:id="@+id/ivNotificationListImage"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_marginLeft="20dp"
         android:src="@drawable/sample_rlogo"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -17,39 +19,51 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView12"
-        android:layout_width="wrap_content"
+        android:id="@+id/tvNotificationListTitle"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:text="Thank You for Dining with Golden Baboy!"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:text="Thank You for Dining with Golden Baboy! Dining with Golden Baboy!"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/circleImageView3"
-        app:layout_constraintTop_toTopOf="@+id/circleImageView3" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/ivNotificationListImage"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView26"
-        android:layout_width="wrap_content"
+        android:id="@+id/tvNotificationListDescription"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="5dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:text="Morayta, Metro Manila"
         android:textColor="@color/black"
         android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@+id/textView12"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        app:layout_constraintEnd_toEndOf="@+id/tvNotificationListTitle"
+        app:layout_constraintStart_toStartOf="@+id/tvNotificationListTitle"
+        app:layout_constraintTop_toBottomOf="@+id/tvNotificationListTitle" />
 
     <TextView
-        android:id="@+id/textView27"
-        android:layout_width="wrap_content"
+        android:id="@+id/tvNotificationListTime"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:layout_marginTop="5dp"
         android:drawableLeft="@drawable/ic_time"
         android:drawablePadding="3dp"
         android:text="2 hours ago"
         android:textColor="@color/sideBarViewColor"
         android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@+id/textView26"
-        app:layout_constraintTop_toBottomOf="@+id/textView26" />
+        app:layout_constraintEnd_toEndOf="@+id/tvNotificationListDescription"
+        app:layout_constraintStart_toStartOf="@+id/tvNotificationListDescription"
+        app:layout_constraintTop_toBottomOf="@+id/tvNotificationListDescription" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
