--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,5 @@
     <color name="closingTimeTextColor">#A70000</color>
     <color name="notificationBgColor">#E5EFF5</color>
     <color name="menuTextColor">#91001B</color>
+    <color name="bookingDetailsBackground">#F8F8F8</color>
 </resources>
