--- a/app/src/main/res/layout/activity_transaction_history.xml
+++ b/app/src/main/res/layout/activity_transaction_history.xml
@@ -48,7 +48,7 @@
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Transaction History"
+                android:text="Booking History"
                 android:textColor="@color/loginColor"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="@+id/btn_transaction_back"
